<resources>
    <string name="app_name">Kyucsa</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="app_name">KYUCSA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text1">Network As you Learn </string>
    <string name="welcome_text2">Join Other Techies as you Explore</string>
    <string name="welcome_text3">Interested in Web, Cloud, AI and Networking Technologies? </string>
    <string name="welcome_sports">Then you are in the right place.</string>
    <string name="welcome_text5">...</string>
    <string name="auth_to_continue">Login or Register To Continue...</string>
    <string name="login_btn_welcome">Login</string>
    <string name="register_btn_welcome">Register</string>
    <string name="welcome_text">Welcome To KYUCSA APP</string>
    <string name="todo">TODO</string>
    <string name="login_h1">Tech Updates</string>
    <string name="login_h2">Welcome Back</string>
    <string name="login_title">Login</string>
    <string name="no_account">Have No Account ?</string>
    <string name="create">Create</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="forgot_pw">Forgot Password ?</string>
    <string name="login_btn">Login</string>
    <string name="cnn_logo_des">cnn_logo</string>
    <string name="news_updates_h">Discover your Path</string>
    <string name="join_today">Join Today</string>
    <string name="register_title">Register</string>
    <string name="have_account">Have An Account ?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dec">description</string>
    <string name="user_name">User Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">SignUp</string>
    <string name="business_news">Business News</string>
    <string name="entertainment_news">Entertainment News</string>
    <string name="health_news">Health News</string>
    <string name="warning">Warning</string>
    <string name="accept">Are You Sure You Want to Logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>

    <string name="exit">Exit</string>
    <string name="travel_news">Travel News</string>
</resources>