<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kyucsa_bg"
    tools:context=".LandingActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".50"
        android:background="@color/text_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_bg_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/cnn_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="logo"
                android:src="@drawable/kyucsa_logo"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/aladin"
            android:padding="10dp"
            android:text="@string/welcome_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text2"
            android:textAlignment="center"
            android:shadowColor="@color/black"
            android:textColor="@color/dark_red"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/aladin"
            android:text="@string/welcome_text3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/aladin"
            android:text="@string/welcome_sports"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text5"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/arimo"
            android:text="@string/auth_to_continue"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="72dp"
                android:layout_height="35dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="#1359A8"
                android:fontFamily="@font/arimo"
                android:text="@string/login_btn_welcome"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="72dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_bg"
                android:backgroundTint="#D15705"
                android:fontFamily="@font/arimo"
                android:text="@string/register_btn_welcome"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/courtesy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Courtesy of Okuro &amp; Simenya"
        android:textSize="10sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&#169; 2022 | All Rights Reserved"
        android:textColor="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.925" />

</androidx.constraintlayout.widget.ConstraintLayout>